openshift/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP_NAME
spec:
  replicas: 2
  selector:
    matchLabels:
      app: $APP_NAME
  template:
    metadata:
      labels:
        app: $APP_NAME
    spec:
      containers:
        - name: $APP_NAME
          image: $ACR_IMAGE
          ports:
            - containerPort: $APP_PORT
              name: $APP_PORT_NAME
          # env:
          #   - name: REACT_APP_STRAPI_URL
          #     value: "$REACT_APP_STRAPI_URL"
          #   - name: REACT_APP_SURA_URL
          #     value: "$REACT_APP_SURA_URL"
          #   - name: REACT_APP_SUBSCRIPTION_ID
          #     value: "$REACT_APP_SUBSCRIPTION_ID"
          #   - name: REACT_APP_RESOURCE_GROUP_NAME
          #     value: "$REACT_APP_RESOURCE_GROUP_NAME"
          #   - name: REACT_APP_SERVICE_NAME
          #     value: "$REACT_APP_SERVICE_NAME"
          #   - name: REACT_APP_API_VERSION
          #     value: "$REACT_APP_API_VERSION"
          #   - name: REACT_APP_REMEMBER_KEY
          #     value: "$REACT_APP_REMEMBER_KEY"
          #   - name: REACT_APP_PRIMARY_KEY
          #     value: "$REACT_APP_PRIMARY_KEY"
          #   - name: REACT_APP_APIM_UID
          #     value: "$REACT_APP_APIM_UID"
          #   - name: REACT_APP_TOKEN_VALID_DAYS
          #     value: "$REACT_APP_TOKEN_VALID_DAYS"
          #   - name: REACT_APP_LIST_API_TOP
          #     value: "$REACT_APP_LIST_API_TOP"
          #   - name: REACT_APP_LIST_PRODUCT_APIS_TOP
          #     value: "$REACT_APP_LIST_PRODUCT_APIS_TOP"
          #   - name: REACT_APP_LIST_PRODUCT_TOP
          #     value: "$REACT_APP_LIST_PRODUCT_TOP"
          #   - name: REACT_APP_LIST_SUBSCRIPTIONS
          #     value: "$REACT_APP_LIST_SUBSCRIPTIONS"
          #   - name: WDS_SOCKET_PORT
          #     value: "$WDS_SOCKET_PORT"
          #   - name: REACT_APP_HOME_PAGE_SLUG
          #     value: "$REACT_APP_HOME_PAGE_SLUG"
          #   - name: REACT_APP_BLOG_PAGE_SLUG
          #     value: "$REACT_APP_BLOG_PAGE_SLUG"
          #   - name: REACT_APP_FAQ_PAGE_SLUG
          #     value: "$REACT_APP_FAQ_PAGE_SLUG"
          #   - name: REACT_APP_APIS_PAGE_SLUG
          #     value: "$REACT_APP_APIS_PAGE_SLUG"
          #   - name: REACT_APP_TERMS_PAGE_SLUG
          #     value: "$REACT_APP_TERMS_PAGE_SLUG"
          #   - name: REACT_APP_POLICY_PAGE_SLUG
          #     value: "$REACT_APP_POLICY_PAGE_SLUG"
          #   - name: REACT_APP_EMAIL_ENDPOINT
          #     value: "$REACT_APP_EMAIL_ENDPOINT"
          #   - name: REACT_APP_API_KEY_SEND_GRID
          #     value: "$REACT_APP_API_KEY_SEND_GRID"
          #   - name: REACT_APP_EMAIL_SUBSCRIPTION_KEY
          #     value: "$REACT_APP_EMAIL_SUBSCRIPTION_KEY"
          #   - name: REACT_APP_EMAIL_TO
          #     value: "$REACT_APP_EMAIL_TO"
          #   - name: REACT_APP_EMAIL_FROM
          #     value: "$REACT_APP_EMAIL_FROM"
          #   - name: REACT_APP_EMAIL_CONVERSATION_TEMPLATE_ID
          #     value: "$REACT_APP_EMAIL_CONVERSATION_TEMPLATE_ID"
          #   - name: REACT_APP_EMAIL_CONTACT_TEMPLATE_ID
          #     value: "$REACT_APP_EMAIL_CONTACT_TEMPLATE_ID"
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
      imagePullpolicy: Always
      imagePullSecrets:
        - name: $ACR_SECRET_IMAGE_PULL

---
apiVersion: v1
kind: Service
metadata:
  name: $APP_NAME
spec:
  selector:
    app: $APP_NAME
  ports:
    - name: ${APP_PORT_NAME}-svc
      nodePort: 0
      port: 80
      protocol: TCP
      targetPort: $APP_PORT_NAME

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: $APP_NAME
  annotations:
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
spec:
  host: $HTTP_HOST
  port:
    targetPort: ${APP_PORT_NAME}-svc
  to:
    kind: Service
    name: $APP_NAME
  tls:
    termination: edge
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIGRjCCBS6gAwIBAgIRANTp/pJaNE3TE7711xO2eV8wDQYJKoZIhvcNAQELBQAw
[...]
      5/eMGtOUPhw9zPiJREnFOCgqzAVojD/sQ3k=
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIEvwIBADANBgkqhkiG9w0BAQEFAASCBKkwggSlAgEAAoIBAQDBr6r2HhhzwX4e
[...]
      vmai8Shh2350PcUby8Qvbu8pcA==
      -----END PRIVATE KEY-----
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFgTCCBGmgAwIBAgIQOXJEOvkit1HX02wQ3TE1lTANBgkqhkiG9w0BAQwFADB7
[...]
      vGp4z7h/jnZymQyd/teRCBaho1+V
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIGEzCCA/ugAwIBAgIQfVtRJrR2uhHbdBYLvFMNpzANBgkqhkiG9w0BAQwFADCB
[...]
      00u/I5sUKUErmgQfky3xxzlIPK1aEn8=
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIEMjCCAxqgAwIBAgIBATANBgkqhkiG9w0BAQUFADB7MQswCQYDVQQGEwJHQjEb
[...]
      smPi9WIsgtRqAEFQ8TmDn5XpNpaYbg==
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
